<resources>
    <string name="app_name">Stock Market Search</string>
    <string name="get_quote">Get Quote</string>
    <string name="clear">Clear</string>
    <string name="favourites">Favourites</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="title_activity_stock_detail">StockDetail</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">CURRENT</string>
    <string name="tab_text_2">HISTORICAL</string>
    <string name="tab_text_3">NEWS</string>
    <string name="facebook_app_id">561717247503151</string>
    <string name="stock_details">Stock Details</string>
    <string name="failed_to_load_data">Failed to Load Data</string>
</resources>
