<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.example.chopr.stockmarketsearch.MainActivity">

    <ProgressBar
        android:id="@+id/progress_autocomplete"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_marginTop="@dimen/size_200"
        android:indeterminateTint="@android:color/black"
        android:indeterminateTintMode="src_atop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_25" />

        <AutoCompleteTextView
            android:id="@+id/autoComplete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_main_activity_relative_layout"
            android:layout_marginTop="@dimen/size_22"
            android:ems="10"
            android:textAlignment="center">

            <requestFocus />
        </AutoCompleteTextView>


        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10"
            android:orientation="horizontal"
            android:weightSum="@dimen/const_2">

            <TextView
                android:id="@+id/getQuoteTextView"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/const_1"
                android:text="@string/get_quote"
                android:textAlignment="center"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/font_25" />

            <TextView
                android:id="@+id/clearTextView"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/const_1"
                android:text="@string/clear"
                android:textAlignment="center"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/font_25" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10"
            android:orientation="horizontal"
            android:paddingTop="@dimen/size_10"
            android:weightSum="@dimen/const_2">

            <TextView
                android:id="@+id/favouritesTextView"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/const_1"
                android:text="@string/favourites"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_23" />

            <Switch
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/const_1"
                android:text="@string/auto_refresh"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@android:drawable/ic_popup_sync" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10"
            android:orientation="horizontal"
            android:weightSum="@dimen/const_2">

            <Spinner
                android:id="@+id/spinnerSortBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/const_1"
                android:popupBackground="@android:color/white" />

            <Spinner
                android:id="@+id/spinnerOrderBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/const_1" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />
    </LinearLayout>

</RelativeLayout>